analysis/symbol-light-classes/testData/lightClassByFqName/compilationErrors/ExtendedSuperClassViewedFromAnotherModule.java
public final class CommonChild /* common.pack.CommonChild*/ extends common.pack.MPPSuper {
  public  CommonChild();//  .ctor()
}
